Turn off the auto color readability of LabelButton in non-high contrast mode

We turn on the auto color readability of LabelButton when entering into high
contrast mode, and never turn it off even after exiting the mode. This leads
to wrong colored text when switching from high contrast mode to non-high
contrast mode.

BUG=625205

Review-Url: https://codereview.chromium.org/2111323003
Cr-Commit-Position: refs/heads/master@{#403917}

Former-commit-id: ea4e665db506d059c72cc51593888e5476eac4ac